--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
+        "sass": "^1.97.3",
+        "sass-loader": "^16.0.6",
         "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
+        "vite": "^7.0.7",
+        "vite-plugin-vuetify": "^2.1.3"
     },
     "dependencies": {
         "@mdi/font": "^7.4.47",
